# 0810hackathon-back

./: .dockerignore  .env.template  COMMIT_EDITMSG.txt  CONTAINER_OPTIMIZATION.md  Dockerfile  README.md  compose.yml  pyproject.toml
.github/workflows/: alembic.yml  main.yml  ruff.yml
alembic/: env.py
alembic/versions/: 8fa3543a4fca_random_only.py
app/: app_settings.py  main.py
app/api/endpoints/: random_problems.py  users.py
app/core/: config.py  database.py
app/crud/: base.py  random_problem_crud.py  user.py
app/model/: generated_models.py
app/schema/: random_problem.py  user.py
app/service/: random_problem_service.py  user_service.py
db/: init.sql
docs/: DB.md  alembicについて.md  app以下ディレクトリについて.md  db_schema_all.puml  db_schema_random_only.puml  ログ設定.md  環境変数.md  開発環境.md
